# agent-transcript

./: .gitignore  .lintstagedrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package.json  release-plz.toml
.claude/skills/redacting-screenshots/: SKILL.md
.github/workflows/: release-plz.yml
.husky/: pre-commit
docs/: goals.md
src/: claude_hooks.rs  clipboard.rs  cmd_hook.rs  cmd_parse.rs  color.rs  config.rs  cursor_hooks.rs  default.toml  event.rs  log_buffer.rs  logging.rs  main.rs  plugin_install.rs  reader_op.rs  session_socket.rs  status_bar.rs  tree_operation.rs
src/app/: draw.rs  keys.rs  mod.rs  mouse.rs
src/data_view/: handler.rs  key_shortcuts.rs  mod.rs  reader_logs.rs  session_info.rs  state.rs  ui.rs
src/index/: mod.rs
src/picker/: handler.rs  mod.rs  state.rs  ui.rs
src/providers/: mod.rs
src/providers/claude/: jsonl.rs  message.rs  mod.rs  path.rs  reader.rs  subagent.rs
src/providers/cursor/: db.rs  message.rs  mod.rs  proto.rs  reader.rs
src/terminal/: crop.rs  keys.rs  line_tokenizer.rs  mod.rs  mouse.rs  osc.rs  pane_ref.rs  panel.rs  placeholder.rs  state.rs  tests.rs  ui.rs
src/theme/: dark.toml  light.toml  mod.rs  palette.rs  styles.rs  styles.toml
src/transforms/: lua_transform.rs  markdown_splitter.rs  mod.rs  table_converter.rs  tool_formatter.rs  tool_grouper.rs  tool_result_enricher.rs  ui_initializer.rs
src/tree_scroll_view/: ansi.rs  cursor.rs  handler.rs  markdown.rs  marks.rs  message_widget.rs  mod.rs  predicates.rs  sample.rs  search.rs  state.rs  tests.rs  ui.rs
testdata/: sample-markdown.md
(+39 files in other folders)
