[[bin]]
name = "agt"
path = "src/main.rs"

[package]
name = "agent-transcript"
version = "0.1.0"
description = "agt"
authors = ["Jason Choi <jasonchoi.mtt@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
async-trait = "0.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
tui-markdown = "0.3.7"
ansi-to-tui = "8.0.1"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
chrono = "0.4"
portable-pty = "0.9"
vt100 = "0.16"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
vte = "0.13"
libc = "0.2"
pico-args = "0.5"
md5 = "0.7"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml = "0.8"
pulldown-cmark = "0.12"
base64 = "0.22"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
lua = ["dep:mlua"]

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
